--- a/about.html
+++ b/about.html
@@ -41,13 +41,13 @@
                 <p class="punchline">"Cracking code and hearts with equal precision."</p>
             </article>
             <article class="member-card">
-                <img src="https://randomuser.me/api/portraits/women/22.jpg" alt="Fridah Deraso portrait" class="member-img">
+                <img src="images/people/fridah.JPG" alt="Fridah Deraso portrait" class="member-img">
                 <h2>Fridah Deraso</h2>
                 <p class="code">BSCCS/2025/35619</p>
                 <p class="punchline">"Hacking the matrix, one pixel at a time."</p>
             </article>
             <article class="member-card">
-                <img src="https://randomuser.me/api/portraits/men/33.jpg" alt="Joshua Kitonga portrait" class="member-img">
+                <img src="images/people/kitonga.png.jpeg" alt="Joshua Kitonga portrait" class="member-img">
                 <h2>Joshua Kitonga</h2>
                 <p class="code">BSCCS/2025/40065</p>
                 <p class="punchline">"Firewalls fear my binary charm."</p>
@@ -59,9 +59,9 @@
                 <p class="punchline">"Overclocking dreams in neon streams."</p>
             </article>
             <article class="member-card">
-                <img src="https://randomuser.me/api/portraits/men/15.jpg" alt="Benie Macharia portrait" class="member-img">
+                <img src="images/people/benie.jpeg" alt="Benie Macharia portrait" class="member-img">
                 <h2>Benie Macharia</h2>
-                <p class="code">BSCCS/2025/[TBD]</p>
+                <p class="code">BSCCS/2025/39532</p>
                 <p class="punchline">"Root access to the future."</p>
             </article>
             <article class="member-card">
