--- a/about.html
+++ b/about.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="About the team behind the Valentine Assignment">
+    <meta name="description" content="About the cyberpunk team behind the Valentine Assignment">
     <title>About the Hackers - Valentine Assignment</title>
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=VT323&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=VT323&family=Share+Tech+Mono&display=swap" rel="stylesheet">
 </head>
 <body class="hacker-theme">
+    <canvas id="matrixCanvas" style="position: fixed; top: 0; left: 0; z-index: -1;"></canvas>
     <header>
         <nav class="navbar navbar-expand-lg px-4">
             <a class="navbar-brand" href="index.html">❤️ Valentine</a>
@@ -46,65 +47,65 @@
     <main class="hacker-main container py-5">
         <h1 class="glitch" data-text="Meet the Cyber Crew" aria-label="Meet the Cyber Crew">Meet the Cyber Crew</h1>
         <section class="member-grid">
-            <article class="member-card" id="aristote" tabindex="0" role="button" aria-label="View Aristote Alphonse profile" onclick="showMember('Aristote Alphonse', 'BSCCS/2025/[TBD]', 'Slicing through code like a digital katana.')">
-                <img src="images/people/aristote.jpg" alt="Aristote Alphonse, team member" class="member-img">
+            <article class="member-card" id="aristote" tabindex="0" role="button" aria-label="View Aristote Alphonse profile" onclick="showMember('Aristote Alphonse', 'BSCCS/2025/[TBD]', 'In the digital abyss, I weave code into existence, questioning if reality is but a simulation we dare to rewrite.')">
+                <img src="images/people/aristote.jpg" alt="Aristote Alphonse, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
                 <h2>Aristote Alphonse</h2>
                 <p class="code">BSCCS/2025/[TBD]</p>
-                <p class="punchline">"Slicing through code like a digital katana."</p>
+                <p class="punchline">"In the digital abyss, I weave code into existence, questioning if reality is but a simulation we dare to rewrite."</p>
             </article>
-            <article class="member-card" id="ariel" tabindex="0" role="button" aria-label="View Ariel Boutcher profile" onclick="showMember('Ariel Boutcher', 'BSCCS/2025/40350', 'Cracking code and hearts with equal precision.')">
-                <img src="images/people/ariel.jpg" alt="Ariel Boutcher, team member" class="member-img">
+            <article class="member-card" id="ariel" tabindex="0" role="button" aria-label="View Ariel Boutcher profile" onclick="showMember('Ariel Boutcher', 'BSCCS/2025/40350', 'Hacking is my art, painting freedom across the binary canvas, where every line of code challenges the chains of control.')">
+                <img src="images/people/ariel.jpg" alt="Ariel Boutcher, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
                 <h2>Ariel Boutcher</h2>
                 <p class="code">BSCCS/2025/40350</p>
-                <p class="punchline">"Cracking code and hearts with equal precision."</p>
+                <p class="punchline">"Hacking is my art, painting freedom across the binary canvas, where every line of code challenges the chains of control."</p>
             </article>
-            <article class="member-card" id="benie" tabindex="0" role="button" aria-label="View Benie Macharia profile" onclick="showMember('Benie Macharia', 'BSCCS/2025/39532', 'Root access to the future.')">
-                <img src="images/people/benie.jpeg" alt="Benie Macharia, team member" class="member-img">
+            <article class="member-card" id="benie" tabindex="0" role="button" aria-label="View Benie Macharia profile" onclick="showMember('Benie Macharia', 'BSCCS/2025/39532', 'I navigate the datastream, seeking truth beyond the firewall, for in root access lies the key to the universe’s secrets.')">
+                <img src="images/people/benie.jpeg" alt="Benie Macharia, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
                 <h2>Benie Macharia</h2>
                 <p class="code">BSCCS/2025/39532</p>
-                <p class="punchline">"Root access to the future."</p>
+                <p class="punchline">"I navigate the datastream, seeking truth beyond the firewall, for in root access lies the key to the universe’s secrets."</p>
             </article>
-            <article class="member-card" id="derrick" tabindex="0" role="button" aria-label="View Derrick Nyangabi profile" onclick="showMember('Derrick Nyangabi', 'BSCCS/2025/[TBD]', 'Debugging reality since \'25.')">
-                <img src="images/people/derrick.jpg" alt="Derrick Nyangabi, team member" class="member-img">
+            <article class="member-card" id="derrick" tabindex="0" role="button" aria-label="View Derrick Nyangabi profile" onclick="showMember('Derrick Nyangabi', 'BSCCS/2025/[TBD]', 'Debugging reality, I unravel the glitches of existence, pondering if our souls are mere algorithms in an infinite loop.')">
+                <img src="images/people/derrick.jpg" alt="Derrick Nyangabi, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
                 <h2>Derrick Nyangabi</h2>
                 <p class="code">BSCCS/2025/[TBD]</p>
-                <p class="punchline">"Debugging reality since '25."</p>
+                <p class="punchline">"Debugging reality, I unravel the glitches of existence, pondering if our souls are mere algorithms in an infinite loop."</p>
             </article>
-            <article class="member-card" id="rose" tabindex="0" role="button" aria-label="View Rose Kioko profile" onclick="showMember('Rose Kioko', 'BSCCS/2025/[TBD]', 'Encrypting chaos with style.')">
-                <img src="images/people/rose.jpeg" alt="Rose Kioko, team member" class="member-img">
+            <article class="member-card" id="rose" tabindex="0" role="button" aria-label="View Rose Kioko profile" onclick="showMember('Rose Kioko', 'BSCCS/2025/[TBD]', 'Encrypting chaos into order, I craft digital sanctuaries, believing true power lies in shielding the human spirit.')">
+                <img src="images/people/rose.jpeg" alt="Rose Kioko, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
                 <h2>Rose Kioko</h2>
                 <p class="code">BSCCS/2025/[TBD]</p>
-                <p class="punchline">"Encrypting chaos with style."</p>
+                <p class="punchline">"Encrypting chaos into order, I craft digital sanctuaries, believing true power lies in shielding the human spirit."</p>
             </article>
-            <article class="member-card" id="grace" tabindex="0" role="button" aria-label="View Grace Wanyeki profile" onclick="showMember('Grace Wanyeki', 'BSCCS/2025/[TBD]', 'Uploading elegance to the cloud.')">
-                <img src="images/people/grace.jpg" alt="Grace Wanyeki, team member" class="member-img">
+            <article class="member-card" id="grace" tabindex="0" role="button" aria-label="View Grace Wanyeki profile" onclick="showMember('Grace Wanyeki', 'BSCCS/2025/[TBD]', 'Uploading elegance to the cloud, I blur the line between man and machine, dreaming of a world where data dances freely.')">
+                <img src="images/people/grace.jpg" alt="Grace Wanyeki, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
                 <h2>Grace Wanyeki</h2>
                 <p class="code">BSCCS/2025/[TBD]</p>
-                <p class="punchline">"Uploading elegance to the cloud."</p>
+                <p class="punchline">"Uploading elegance to the cloud, I blur the line between man and machine, dreaming of a world where data dances freely."</p>
             </article>
-            <article class="member-card" id="finley" tabindex="0" role="button" aria-label="View Finley Motari profile" onclick="showMember('Finley Motari', 'BSCCS/2025/39262', 'Overclocking dreams in neon streams.')">
-                <img src="images/people/finley.jpg" alt="Finley Motari, team member" class="member-img">
+            <article class="member-card" id="finley" tabindex="0" role="button" aria-label="View Finley Motari profile" onclick="showMember('Finley Motari', 'BSCCS/2025/39262', 'Overclocking the mind’s circuits, I chase neon dreams, asking if consciousness can transcend the silicon veil.')">
+                <img src="images/people/finley.jpg" alt="Finley Motari, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
                 <h2>Finley Motari</h2>
                 <p class="code">BSCCS/2025/39262</p>
-                <p class="punchline">"Overclocking dreams in neon streams."</p>
+                <p class="punchline">"Overclocking the mind’s circuits, I chase neon dreams, asking if consciousness can transcend the silicon veil."</p>
             </article>
-            <article class="member-card" id="joshua" tabindex="0" role="button" aria-label="View Joshua Kitonga profile" onclick="showMember('Joshua Kitonga', 'BSCCS/2025/40065', 'Firewalls fear my binary charm.')">
-                <img src="images/people/kitonga.png.jpeg" alt="Joshua Kitonga, team member" class="member-img">
+            <article class="member-card" id="joshua" tabindex="0" role="button" aria-label="View Joshua Kitonga profile" onclick="showMember('Joshua Kitonga', 'BSCCS/2025/40065', 'My binary charm pierces firewalls, forging connections in a fragmented world, where every byte whispers rebellion.')">
+                <img src="images/people/kitonga.png.jpeg" alt="Joshua Kitonga, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
                 <h2>Joshua Kitonga</h2>
                 <p class="code">BSCCS/2025/40065</p>
-                <p class="punchline">"Firewalls fear my binary charm."</p>
+                <p class="punchline">"My binary charm pierces firewalls, forging connections in a fragmented world, where every byte whispers rebellion."</p>
             </article>
-            <article class="member-card" id="fridah" tabindex="0" role="button" aria-label="View Fridah Deraso profile" onclick="showMember('Fridah Deraso', 'BSCCS/2025/35619', 'Hacking the matrix, one pixel at a time.')">
-                <img src="images/people/fridah.JPG" alt="Fridah Deraso, team member" class="member-img">
+            <article class="member-card" id="fridah" tabindex="0" role="button" aria-label="View Fridah Deraso profile" onclick="showMember('Fridah Deraso', 'BSCCS/2025/35619', 'Pixel by pixel, I hack the matrix, seeking meaning in the chaos, for in code we glimpse the eternal.')">
+                <img src="images/people/fridah.JPG" alt="Fridah Deraso, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
                 <h2>Fridah Deraso</h2>
                 <p class="code">BSCCS/2025/35619</p>
-                <p class="punchline">"Hacking the matrix, one pixel at a time."</p>
+                <p class="punchline">"Pixel by pixel, I hack the matrix, seeking meaning in the chaos, for in code we glimpse the eternal."</p>
             </article>
-            <article class="member-card" id="abdalla" tabindex="0" role="button" aria-label="View Abdalla profile" onclick="showMember('Abdalla', 'BSCCS/2025/[TBD]', 'Commanding the terminal with swagger.')">
-                <img src="images/people/abdalla.jpg" alt="Abdalla, team member" class="member-img">
+            <article class="member-card" id="abdalla" tabindex="0" role="button" aria-label="View Abdalla profile" onclick="showMember('Abdalla', 'BSCCS/2025/[TBD]', 'Commanding the terminal, I sculpt the future, wondering if our digital shadows will outlive our flesh.')">
+                <img src="images/people/abdalla.jpg" alt="Abdalla, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
                 <h2>Abdalla</h2>
                 <p class="code">BSCCS/2025/[TBD]</p>
-                <p class="punchline">"Commanding the terminal with swagger."</p>
+                <p class="punchline">"Commanding the terminal, I sculpt the future, wondering if our digital shadows will outlive our flesh."</p>
             </article>
         </section>
     </main>
