--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Valentine Message</title>
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=VT323&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=VT323&family=Share+Tech+Mono&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -47,7 +47,7 @@
         <p id="salutation" class="display-4">Hi, Will you be my valentine? 💖</p>
         <picture>
             <source src="images/first.gif" type="image/gif">
-            <img id="mainImage" src="images/fallback.jpg" alt="Valentine-themed animation" class="img-fluid rounded">
+            <img id="mainImage" src="images/first.gif" alt="Valentine-themed animation of a romantic scene" class="img-fluid rounded">
         </picture>
         <div class="button-group">
             <button id="yes" class="btn btn-success">YES 💌</button>
