--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <title>Contact - Valentine Assignment</title>
     <link rel="stylesheet" href="styles/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=VT323&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=VT323&family=Share+Tech+Mono&family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -44,7 +44,7 @@
         </nav>
     </header>
     <main class="container py-5">
-        <h1 class="display-4 text-center" style="font-family: 'Orbitron', sans-serif;">Contact Us</h1>
+        <h1 class="display-4 text-center" style="font-family: 'Pacifico', cursive;">Contact Us 💕</h1>
         <section class="contact-form">
             <div class="card p-4 mx-auto" style="max-width: 500px;">
                 <div class="mb-3">
@@ -57,7 +57,7 @@
                     <textarea class="form-control" id="contactMessage" rows="5" placeholder="Your message..." aria-describedby="contactMessageError"></textarea>
                     <div id="contactMessageError" class="text-danger mt-2" style="display: none;">Please enter a message.</div>
                 </div>
-                <button type="button" class="btn btn-primary" onclick="submitContact()">Send</button>
+                <button type="button" class="btn btn-primary" onclick="submitContact()">Send 💌</button>
             </div>
         </section>
     </main>
