about page fixes

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
                 <p class="punchline">"I navigate the datastream, seeking truth beyond the firewall, for in root access lies the key to the universe’s secrets."</p>
             </article>
             <article class="member-card" id="derrick" tabindex="0" role="button" aria-label="View Derrick Nyangabi profile" onclick="showMember('Derrick Nyangabi', 'BSCCS/2025/[TBD]', 'Debugging reality, I unravel the glitches of existence, pondering if our souls are mere algorithms in an infinite loop.')">
-                <img src="images/people/derrick.jpg" alt="Derrick Nyangabi, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
+                <img src="images/people/derrick.jpeg" alt="Derrick Nyangabi, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
                 <h2>Derrick Nyangabi</h2>
                 <p class="code">BSCCS/2025/[TBD]</p>
                 <p class="punchline">"Debugging reality, I unravel the glitches of existence, pondering if our souls are mere algorithms in an infinite loop."</p>
@@ -74,17 +74,17 @@
             <article class="member-card" id="rose" tabindex="0" role="button" aria-label="View Rose Kioko profile" onclick="showMember('Rose Kioko', 'BSCCS/2025/[TBD]', 'Encrypting chaos into order, I craft digital sanctuaries, believing true power lies in shielding the human spirit.')">
                 <img src="images/people/rose.jpeg" alt="Rose Kioko, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
                 <h2>Rose Kioko</h2>
-                <p class="code">BSCCS/2025/[TBD]</p>
+                <p class="code">BSCCS/2025/39761</p>
                 <p class="punchline">"Encrypting chaos into order, I craft digital sanctuaries, believing true power lies in shielding the human spirit."</p>
             </article>
             <article class="member-card" id="grace" tabindex="0" role="button" aria-label="View Grace Wanyeki profile" onclick="showMember('Grace Wanyeki', 'BSCCS/2025/[TBD]', 'Uploading elegance to the cloud, I blur the line between man and machine, dreaming of a world where data dances freely.')">
                 <img src="images/people/grace.jpg" alt="Grace Wanyeki, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
                 <h2>Grace Wanyeki</h2>
-                <p class="code">BSCCS/2025/[TBD]</p>
+                <p class="code">BSCCS/2025/39629</p>
                 <p class="punchline">"Uploading elegance to the cloud, I blur the line between man and machine, dreaming of a world where data dances freely."</p>
             </article>
             <article class="member-card" id="finley" tabindex="0" role="button" aria-label="View Finley Motari profile" onclick="showMember('Finley Motari', 'BSCCS/2025/39262', 'Overclocking the mind’s circuits, I chase neon dreams, asking if consciousness can transcend the silicon veil.')">
-                <img src="images/people/finley.jpg" alt="Finley Motari, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
+                <img src="images/people/finley.jpeg" alt="Finley Motari, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
                 <h2>Finley Motari</h2>
                 <p class="code">BSCCS/2025/39262</p>
                 <p class="punchline">"Overclocking the mind’s circuits, I chase neon dreams, asking if consciousness can transcend the silicon veil."</p>
@@ -103,8 +103,8 @@
             </article>
             <article class="member-card" id="abdalla" tabindex="0" role="button" aria-label="View Abdalla profile" onclick="showMember('Abdalla', 'BSCCS/2025/[TBD]', 'Commanding the terminal, I sculpt the future, wondering if our digital shadows will outlive our flesh.')">
                 <img src="images/people/abdalla.jpg" alt="Abdalla, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
-                <h2>Abdalla</h2>
-                <p class="code">BSCCS/2025/[TBD]</p>
+                <h2>Abdulkarim Maganga</h2>
+                <p class="code">BSCCS/2025/40538</p>
                 <p class="punchline">"Commanding the terminal, I sculpt the future, wondering if our digital shadows will outlive our flesh."</p>
             </article>
         </section>
