--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
                 <p class="punchline">"Encrypting chaos into order, I craft digital sanctuaries, believing true power lies in shielding the human spirit."</p>
             </article>
             <article class="member-card" id="grace" tabindex="0" role="button" aria-label="View Grace Wanyeki profile" onclick="showMember('Grace Wanyeki', 'BSCCS/2025/[TBD]', 'Uploading elegance to the cloud, I blur the line between man and machine, dreaming of a world where data dances freely.')">
-                <img src="images/people/grace.jpg" alt="Grace Wanyeki, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
+                <img src="images/people/grace.jpeg" alt="Grace Wanyeki, team member" class="member-img" onerror="this.src='images/fallback.jpg'">
                 <h2>Grace Wanyeki</h2>
                 <p class="code">BSCCS/2025/39629</p>
                 <p class="punchline">"Uploading elegance to the cloud, I blur the line between man and machine, dreaming of a world where data dances freely."</p>
