--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                             <li><a class="dropdown-item" href="about.html#aristote"><img src="images/people/aristote.jpg" alt="Aristote Alphonse, team member" class="member-img">Aristote Alphonse</a></li>
                             <li><a class="dropdown-item" href="about.html#ariel"><img src="images/people/ariel.jpg" alt="Ariel Boutcher, team member" class="member-img">Ariel Boutcher</a></li>
                             <li><a class="dropdown-item" href="about.html#benie"><img src="images/people/benie.jpeg" alt="Benie Macharia, team member" class="member-img">Benie Macharia</a></li>
-                            <li><a class="dropdown-item" href="about.html#derrick"><img src="images/people/derrick.jpg" alt="Derrick Nyangabi, team member" class="member-img">Derrick Nyangabi</a></li>
+                            <li><a class="dropdown-item" href="about.html#derrick"><img src="images/people/derrick.jpeg" alt="Derrick Nyangabi, team member" class="member-img">Derrick Nyangabi</a></li>
                             <li><a class="dropdown-item" href="about.html#rose"><img src="images/people/rose.jpeg" alt="Rose Kioko, team member" class="member-img">Rose Kioko</a></li>
-                            <li><a class="dropdown-item" href="about.html#grace"><img src="images/people/grace.jpg" alt="Grace Wanyeki, team member" class="member-img">Grace Wanyeki</a></li>
-                            <li><a class="dropdown-item" href="about.html#finley"><img src="images/people/finley.jpg" alt="Finley Motari, team member" class="member-img">Finley Motari</a></li>
+                            <li><a class="dropdown-item" href="about.html#grace"><img src="images/people/grace.jpeg" alt="Grace Wanyeki, team member" class="member-img">Grace Wanyeki</a></li>
+                            <li><a class="dropdown-item" href="about.html#finley"><img src="images/people/finley.jpeg" alt="Finley Motari, team member" class="member-img">Finley Motari</a></li>
                             <li><a class="dropdown-item" href="about.html#joshua"><img src="images/people/kitonga.png.jpeg" alt="Joshua Kitonga, team member" class="member-img">Joshua Kitonga</a></li>
                             <li><a class="dropdown-item" href="about.html#fridah"><img src="images/people/fridah.JPG" alt="Fridah Deraso, team member" class="member-img">Fridah Deraso</a></li>
                             <li><a class="dropdown-item" href="about.html#abdalla"><img src="images/people/abdalla.jpg" alt="Abdalla, team member" class="member-img">Abdalla</a></li>
